# databricks-ai-bridge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  NOTICE.txt  README.md  pyproject.toml
.github/workflows/: main.yml
docs/: Makefile  README.md
docs/source/: conf.py  index.rst
docs/source/_static/css/: sphinx_rtd_theme-tweaks.css
docs/source/_static/js/: custom.js
docs/source/latest/: databricks_ai_bridge.rst  databricks_langchain.rst  databricks_openai.rst
integrations/langchain/: README.md  pyproject.toml
integrations/langchain/src/databricks_langchain/: __init__.py  chat_models.py  embeddings.py  genie.py  utils.py  vector_search_retriever_tool.py  vectorstores.py
integrations/langchain/src/databricks_langchain/uc_ai/: __init__.py
integrations/langchain/tests/: test_embeddings.py  test_vectorstores.py
integrations/langchain/tests/integration_tests/: test_chat_models.py  test_embeddings.py
integrations/langchain/tests/unit_tests/: test_chat_models.py  test_embeddings.py  test_genie.py  test_imports.py  test_vector_search_retriever_tool.py  test_vectorstores.py
integrations/langchain/tests/utils/: chat_models.py  vector_search.py
integrations/llamaindex/: pyproject.toml
integrations/llamaindex/src/databricks_llamaindex/: __init__.py  vector_search_retriever_tool.py
integrations/llamaindex/tests/unit_tests/: test_vector_search_retriever_tool.py
integrations/openai/: README.md  pyproject.toml
integrations/openai/src/databricks_openai/: __init__.py  vector_search_retriever_tool.py
integrations/openai/src/databricks_openai/uc_ai/: __init__.py
integrations/openai/tests/unit_tests/: test_imports.py  test_vector_search_retriever_tool.py
requirements/: dev-requirements.txt
src/databricks_ai_bridge/: external_tools.py  genie.py  vector_search_retriever_tool.py
src/databricks_ai_bridge/test_utils/: vector_search.py
src/databricks_ai_bridge/utils/: annotations.py  vector_search.py
tests/databricks_ai_bridge/: test_external_tools.py  test_genie.py  test_vector_search_retriever_tool.py
tests/databricks_ai_bridge/utils/: test_vector_search.py
