[project]
name = "databricks-langchain"
version = "0.0.2"
description = "Support for Datarbricks AI support in LangChain"
authors = [
    { name="Prithvi Kannan", email="prithvi.kannan@databricks.com" },
]
readme = "README.md"
license = { text="Apache-2.0" }
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-databricks>=0.1.1",
    "databricks-ai-bridge",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "typing_extensions",
  "databricks-sdk>=0.34.0",
  "ruff==0.6.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "src/databricks_langchain/*"
]

[tool.hatch.build.targets.wheel]
packages = ["src/databricks_langchain"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
  # isort
  "I",
  # bugbear rules
  "B",
  # remove unused imports
  "F401",
  # bare except statements
  "E722",
  # print statements
  "T201",
  "T203",
  # misuse of typing.TYPE_CHECKING
  "TCH004",
  # import rules
  "TID251",
  # undefined-local-with-import-star
  "F403",
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88

[tool.ruff.lint.pydocstyle]
convention = "google"