[project]
name = "databricks-openai"
version = "0.2.0.dev"
description = "Support for Databricks AI support with OpenAI"
authors = [
    { name="Leon Bi", email="leon.bi@databricks.com" },
]
readme = "README.md"
license = { text="Apache-2.0" }
requires-python = ">=3.9"
dependencies = [
    "databricks-vectorsearch>=0.40",
    "databricks-ai-bridge>=0.1.0",
    "openai>=1.46.1",
    "pydantic>2.10.0",
    "mlflow>=2.20.1",
    "unitycatalog-openai",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "typing_extensions",
    "databricks-sdk>=0.34.0",
    "ruff==0.6.4",
]

integration = [
    "pytest-timeout>=2.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "src/databricks_openai/*"
]

[tool.hatch.build.targets.wheel]
packages = ["src/databricks_openai"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    # isort
    "I",
    # bugbear rules
    "B",
    # remove unused imports
    "F401",
    # bare except statements
    "E722",
    # print statements
    "T201",
    "T203",
    # misuse of typing.TYPE_CHECKING
    "TCH004",
    # import rules
    "TID251",
    # undefined-local-with-import-star
    "F403",
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88

[tool.ruff.lint.pydocstyle]
convention = "google"
